# omicslog_dev

./: .gitignore  README.md  demo.ipynb  make_readme.sh  pyproject.toml
src/omicslog/: __init__.py  core.py
