[tool.poetry]
name = "omicslog"
version = "0.1.0"
description = "AnnData subclass that automatically logs mutations to .uns['_omicslog']"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/your-org/omicslog"
repository = "https://github.com/your-org/omicslog"
keywords = ["bioinformatics", "single-cell", "anndata", "logging"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
packages = [{include = "omicslog", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
anndata = ">=0.10"
numpy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
black = "^24.8.0"
ipykernel = "^7.2.0"
pytest = "^8.0.0"
scipy = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
